--- a/calc/SConscript
+++ b/calc/SConscript
@@ -48,7 +48,7 @@ elif(platform.system() == "Windows"):
    env_dll.Append( CPPFLAGS = ' /D "CALC_EXPORTS" ')
 
 #build C++ library
-cpplib = env_dll.SharedLibrary( target = 'calc', source = ['../calc/Ship.cpp', '../calc/Player.cpp','../calc/Game.cpp','../calc/State.cpp', '../calc/Move.cpp'])
+cpplib = env_dll.SharedLibrary( target = 'calc', source = ['../calc/Ship.cpp', '../calc/Player.cpp','../calc/Game.cpp','../calc/State.cpp', '../calc/Move.cpp', '../calc/Game_module.cpp' ])
 if(platform.system() == "Linux"):
    target = '../build_web/calcpy/calc.so'
 elif(platform.system() == "Windows"):
