--- a/calc/SConscript
+++ b/calc/SConscript
@@ -48,13 +48,14 @@ elif(platform.system() == "Windows"):
    env_dll.Append( CPPFLAGS = ' /D "CALC_EXPORTS" ')
 
 #build C++ library
-cpplib = env_dll.SharedLibrary( target = 'calc', source = ['../calc/Ship.cpp', '../calc/Player.cpp','../calc/Game.cpp'])
+cpplib = env_dll.SharedLibrary( target = 'calc', source = ['../calc/Ship.cpp', '../calc/Player.cpp','../calc/Game.cpp','../calc/State.cpp', '../calc/Move.cpp', '../calc/Game_module.cpp', '../calc/test.cpp' ])
 if(platform.system() == "Linux"):
    target = '../build_web/calcpy/calc.so'
 elif(platform.system() == "Windows"):
    target = '../build_web/calcpy/calc.pyd'
 env_dll.Command(target, cpplib, copyLibBuilder )
-"""
+
+
 #build tests
 env_test = env.Clone()
 
@@ -63,6 +64,4 @@ if(platform.system() == "Linux"):
    env_test.Prepend( LIBS = 'calc' )
 elif(platform.system() == "Windows"):
    env_test.Prepend( LIBS = 'calc' )
-env_test.Program( target = "calc_test", source = 'tests/calc_test.cpp')
-"""
-
+env_test.Program( target = "calc_test", source = 'test.cpp')
